--- a/app/src/main/res/layout/activity_form_lig_prov_calc_enc.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_calc_enc.xml
@@ -8,7 +8,9 @@
     app:cardCornerRadius="5dp"
     app:cardElevation="1dp"
     tools:layout_editor_absoluteX="8dp"
-    tools:layout_editor_absoluteY="153dp">
+    tools:layout_editor_absoluteY="153dp"
+    xmlns:mask="http://schemas.android.com/apk/res-auto"
+    >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -85,18 +87,27 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:visibility="gone"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncPeriodo">
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncPeriodo"
+            app:layout_constraintVertical_bias="0.0"
+            android:visibility="gone">
 
-            <android.support.design.widget.TextInputEditText
+            <br.com.sapereaude.maskedEditText.MaskedEditText
+                android:id="@+id/maskedEditTextCalcEncTempo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Tempo (Horas)"
-                android:inputType="number" />
+                android:hint="Tempo (Horas) [XX:XX]"
+                android:inputType="number"
+                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutCalcDecTempo"
+                app:layout_constraintStart_toStartOf="@+id/textInputLayoutCalcDecTempo"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcDecTempo"
+                mask:allowed_chars="1234567890"
+                mask:mask="##:##" />
         </android.support.design.widget.TextInputLayout>
-
 
 
 
@@ -126,13 +137,15 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBoxCalcEncCorrente">
+            app:layout_constraintTop_toBottomOf="@+id/checkBoxCalcEncCorrente"
+            >
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Corrente"
-                android:inputType="number" />
+                android:inputType="number"
+                android:digits="0123456789." />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -154,7 +167,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Tensao"
-                android:inputType="number" />
+                android:inputType="number"
+                android:digits="0123456789."/>
         </android.support.design.widget.TextInputLayout>
 
 
