--- a/app/src/main/res/layout/activity_form_lig_prov_calc_info.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_calc_info.xml
@@ -111,5 +111,20 @@
             app:layout_constraintStart_toStartOf="@+id/textViewInfoTotEnc"
             app:layout_constraintTop_toBottomOf="@+id/textViewInfoLevCarga"
             app:layout_constraintVertical_bias="0.0" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingActionButtonInfoSendEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:clickable="true"
+            android:visibility="gone"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:fabSize="mini"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView11"
+            app:srcCompat="@drawable/ic_mail" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
