Ajuste para o uso de decimal nos campos de cálculo do LigProv declarado

--- a/app/src/main/res/layout/activity_form_lig_prov_calc_dec.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_calc_dec.xml
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Valor"
-                android:inputType="number" />
+                android:inputType="numberDecimal" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
@@ -147,7 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Período (Dias)"
-                android:inputType="number" />
+                android:inputType="numberDecimal" />
         </android.support.design.widget.TextInputLayout>
 
         <!--<android.support.design.widget.TextInputLayout-->
