Refactor dos nomes dos menus

--- a/app/src/main/res/menu/menu_delete_export.xml
+++ b/app/src/main/res/menu/menu_delete_export.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_delete_lp"
+        android:id="@+id/menu_delete"
         android:title="@string/menu_limpar_aplicativo"/>
 
     <item
-        android:id="@+id/menu_export_lp"
+        android:id="@+id/menu_export"
         android:title="@string/menu_exportar_modificacoes"/>
 
 </menu>
