Envio de dados da parte de fiscalizações clandestinas finalizada para a planinha do Google Sheets

--- a/app/src/main/res/layout/item_fiscaliza_clandestino.xml
+++ b/app/src/main/res/layout/item_fiscaliza_clandestino.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewFiscalizaClandestinoStatusUpload"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,10 +33,22 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewFiscalizaClandestinoStatusUpload"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewFiscalizaClandestinoNome"
         app:layout_constraintVertical_bias="0.0"
         tools:text="Endereço" />
+
+    <ImageView
+        android:id="@+id/imageViewFiscalizaClandestinoStatusUpload"
+        android:layout_width="30dp"
+        android:layout_height="0dp"
+        android:background="#8BC34A"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_upload_nuvem_ok" />
 </android.support.constraint.ConstraintLayout>
