--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -179,7 +179,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="8dp"
                     android:gravity="center"
-                    android:text="Ligações Clandestinas"
+                    android:text="Provisórias Clandestinas"
                     android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
