--- a/app/src/main/res/layout/activity_menu_fiscalizacao.xml
+++ b/app/src/main/res/layout/activity_menu_fiscalizacao.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
-                app:srcCompat="@drawable/pirata" />
+                app:srcCompat="@drawable/raio" />
 
             <TextView
                 android:id="@+id/imageViewFiscalizaIntentLP2"
@@ -54,7 +54,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:gravity="center"
-                android:text="Fiscalizações Clandestinos"
+                android:text="Cadastro de Clandestinos"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
